<resources>
    <string name="app_name">AndroidSamples</string>
    <string name="recycler_image_des_thumbnail">thumbnail</string>
    <string name="recycler_image_des_banner">banner</string>
    <string name="recycler_image_des_delete">delete</string>
    <string name="recycler_tv_hint_title">Title</string>
    <string name="recycler_tv_hint_content">Content</string>
    <string name="permission_btn_take_photo">Take Photo</string>
    <string name="permission_btn_get_location">Get Location</string>
    <string name="permission_rationale_msg">We need some permissions to continue:</string>
    <string name="permission_rationale_proceed">Proceed</string>
    <string name="permission_rationale_cancel">Cancel</string>
    <string name="permission_log_granted">Granted</string>
    <string name="permission_log_denied">Denied</string>
    <string name="permission_log_denied_no_forever">Denied</string>
    <string name="permission_log_denied_forever">Denied Forever</string>
    <string name="permission_log_none">None</string>
</resources>
