<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_item_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/recycler_image_des_icon"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ellipsize="end"
        android:hint="@string/recycler_tv_hint_title"
        android:maxLines="1"
        android:textSize="24sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/tv_item_content"
        app:layout_constraintEnd_toStartOf="@+id/iv_item_delete"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/iv_item_image"
        app:layout_constraintTop_toTopOf="@+id/iv_item_image" />

    <TextView
        android:id="@+id/tv_item_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:ellipsize="end"
        android:hint="@string/recycler_tv_hint_content"
        android:maxLines="1"
        android:textSize="16sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/iv_item_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/iv_item_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_title" />

    <ImageView
        android:id="@+id/iv_item_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/recycler_image_des_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_item_title" />

</android.support.constraint.ConstraintLayout>